# bug-cc-library-generated-header-rules-xcodeproj

./: .gitignore  AppDelegate.h  AppDelegate.m  BUILD.bazel  README.md  WORKSPACE  func.mm  gen_header.sh  main.m
src/: hello.cpp
